# arxiv-chat

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_pip_freeze.txt
notebooks/: arxiv_pdfs.ipynb  gemini_pdf.ipynb  llamma_index_rag.ipynb
src/: utils.py
streamlit/: Home.py
streamlit/pages/: 1_New_papers.py
